--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     working_dir: /code
     environment:
       - REDIS_CONNECTION_STRING=redis://redispw@cache:6379
+      - CSRF_TRUSTED_ORIGINS=upload-server:8081,localhost:8081
     ports:
       - ${SERVER_PORT:-8080}:${SERVER_PORT:-8080}
       - ${UI_PORT:-8081}:${UI_PORT:-8081}
